[ADD] 홈화면 탭 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,6 @@ dependencies {
 
     // status bar customization
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
+
+    implementation "com.google.accompanist:accompanist-pager:0.12.0"
 }
