--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
 
     implementation "com.google.accompanist:accompanist-pager:0.12.0"
+
+    def nav_version = "2.5.3"
+
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 }
