--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
 android {
     namespace 'com.handson.thankapolo'
@@ -15,6 +18,8 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+
+        buildConfigField "String", "BASE_URL", properties["base_url"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -54,6 +59,7 @@ dependencies {
 
     // dagger - hilt
     implementation 'com.google.dagger:hilt-android:2.43.1'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.0'
     kapt 'com.google.dagger:hilt-compiler:2.43.1'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
@@ -79,4 +85,15 @@ dependencies {
     def nav_version = "2.5.3"
 
     implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // okhttp3
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.1'
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
