--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.1'
     // gson
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    // Splash screen Api
+    implementation("androidx.core:core-splashscreen:1.0.0")
+
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha01"
 }
