--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
     repositories {
         google()
+        mavenCentral()
     }
     ext {
         compose_version = '1.1.1'
