--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha01"
 
     implementation 'com.google.accompanist:accompanist-swiperefresh:0.24.13-rc'
+
+    implementation "androidx.profileinstaller:profileinstaller:1.2.1"
+
 }
